tests/test179.rael.exp
Range
0 to 89
5 to 12
Error [tests/test179.rael:5:18]: Tried to construct a non-constructable type
| log :Types:String(60)
|                  ^
