tests/test179.rael
load :Types
log :Types:Range
log :Types:Range(89)
log :Types:Range(5, 12)
log :Types:String(60)
